Patients and Doctos validation and Routes Updates
