# Routes/patients.js
@@ -5,27 +5,27 @@ const validation = require('../middleware/validate');
 const patientscontroller = require('../Controllers/patientscontroller');
 
 router.post('/',
- // #swagger.tags = ['Patients']
-  patientscontroller.createPatient);
+  // #swagger.tags = ['Patients']
+  validation.validatePatient, patientscontroller.createPatient);
 
 router.put('/:id',
- // #swagger.tags = ['Patients']
-patientscontroller.updatePatient);
+  // #swagger.tags = ['Patients']
+  validation.validatePatient, patientscontroller.updatePatient);
 
 router.get('/:id',
- // #swagger.tags = ['Patients']
- patientscontroller.getById);
+  // #swagger.tags = ['Patients']
+  patientscontroller.getById);
 
-router.get('/byDoctor:id',
- // #swagger.tags = ['Patients']
-patientscontroller.getByDr);
+router.get('/byDoctor/:id',
+  // #swagger.tags = ['Patients']
+  patientscontroller.getByDr);
 
-router.get('/byDiagnosis:id',
- // #swagger.tags = ['Patients']
-patientscontroller.getByDx);
+router.get('/byDiagnosis/:id',
+  // #swagger.tags = ['Patients']
+  patientscontroller.getByDx);
 
 router.delete('/:id',
- // #swagger.tags = ['Patients']
- patientscontroller.deletePatient);
+  // #swagger.tags = ['Patients']
+  patientscontroller.deletePatient);
 
 module.exports = router;
